@@ -1,0 +1,142 @@
+2 * x (cached) (derivable function):
+
+not cached
+[1](0)
+cached
+[1](0)
+cached
+[1](2)
+[1](2)
+not cached
+[1](1)
+cached
+[1](1)
+cached
+[1](2)
+[1](2)
+not cached
+[1](2)
+cached
+[1](2)
+cached
+[1](2)
+[1](2)
+not cached
+[1](3)
+cached
+[1](3)
+cached
+[1](2)
+[1](2)
+not cached
+[1](4)
+cached
+[1](4)
+cached
+[1](2)
+[1](2)
+not cached
+[1](5)
+cached
+[1](5)
+cached
+[1](2)
+[1](2)
+not cached
+[1](6)
+cached
+[1](6)
+cached
+[1](2)
+[1](2)
+not cached
+[1](7)
+cached
+[1](7)
+cached
+[1](2)
+[1](2)
+not cached
+[1](8)
+cached
+[1](8)
+cached
+[1](2)
+[1](2)
+not cached
+[1](9)
+cached
+[1](9)
+cached
+[1](2)
+[1](2)
+not cached
+[1](10)
+cached
+[1](10)
+cached
+[1](2)
+[1](2)
+not cached
+[1](11)
+cached
+[1](11)
+cached
+[1](2)
+[1](2)
+not cached
+[1](12)
+cached
+[1](12)
+cached
+[1](2)
+[1](2)
+not cached
+[1](13)
+cached
+[1](13)
+cached
+[1](2)
+[1](2)
+not cached
+[1](14)
+cached
+[1](14)
+cached
+[1](2)
+[1](2)
+not cached
+[1](15)
+cached
+[1](15)
+cached
+[1](2)
+[1](2)
+not cached
+[1](16)
+cached
+[1](16)
+cached
+[1](2)
+[1](2)
+not cached
+[1](17)
+cached
+[1](17)
+cached
+[1](2)
+[1](2)
+not cached
+[1](18)
+cached
+[1](18)
+cached
+[1](2)
+[1](2)
+not cached
+[1](19)
+cached
+[1](19)
+cached
+[1](2)
+[1](2)
